version6 fixing the alignment of the images, names, ratings, prices and button inside each product

--- a/styles/firstpage/general.css
+++ b/styles/firstpage/general.css
@@ -5,6 +5,7 @@
 body {
     padding: 0px;
     margin: 0px;
+    background-color: rgb(242, 242, 242);
 }
 /*============================================END=========================================================*/
 
