--- a/styles/firstpage/main.css
+++ b/styles/firstpage/main.css
@@ -18,6 +18,7 @@
 /*========================================START========================================================*/
 .one-product-container {
     border: 1px solid rgb(233, 233, 233);
+
     width: 220px;
     display: flex;
     justify-content: center;
@@ -25,15 +26,32 @@
     flex-direction: column;
     padding: 10px;
     border-right: none;
+    background-color: white;
+   
 }
 
 /*---Product image container---*/
 .product-img-container {
-    /*border: 2px solid black;*/
-    width: 93%;
+    /*border: 2px solid black;
+        width: 93%;
+    */
+    
+
+
+     /*correcting the alignment of the images*/
+     width: 100%;
+     height: 150px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     overflow: hidden;
 }
 .product-img-container img {
-    width: 80%;
+    /*width: 80%;*/
+
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .product-name {
@@ -42,6 +60,17 @@
     margin-top: 15px;
     margin-bottom: 15px;
     font-size: 18px;
+
+    /*added to fix the alignment of the name of the products*/
+    width: 100%; /* Ensure it takes full width */
+    height: 2.8em; /* Adjust based on font size (2 lines) */
+    line-height: 1.4em; /* Control spacing between lines */
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Limit to 2 lines */
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    white-space: normal;
 }
 
 .ratings-container {
@@ -104,7 +133,7 @@
     margin-bottom: 10px;
     width: 85%;
     padding: 7px 0px;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 600;
     background-color: rgb(252, 210, 0);
     border: none;
